; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/libpq/extr_pqmq.c_pq_set_parallel_master.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/libpq/extr_pqmq.c_pq_set_parallel_master.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PqCommMethods = common dso_local global i32* null, align 8
@PqCommMqMethods = common dso_local global i32 0, align 4
@pq_mq_parallel_master_pid = common dso_local global i32 0, align 4
@pq_mq_parallel_master_backend_id = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pq_set_parallel_master(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32*, i32** @PqCommMethods, align 8
  %6 = icmp eq i32* %5, @PqCommMqMethods
  %7 = zext i1 %6 to i32
  %8 = call i32 @Assert(i32 %7)
  %9 = load i32, i32* %3, align 4
  store i32 %9, i32* @pq_mq_parallel_master_pid, align 4
  %10 = load i32, i32* %4, align 4
  store i32 %10, i32* @pq_mq_parallel_master_backend_id, align 4
  ret void
}

declare dso_local i32 @Assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
